--- a/_config.yml
+++ b/_config.yml
@@ -76,15 +76,15 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: University of Nevada, Las Vegas
+        #link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        sub_title: Research Assistant
+        caption: November 2021 - Present
+        #quote: >
+          #Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            Building new UAS systems and adding functionality.
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
@@ -92,6 +92,7 @@ content:
       - layout: left
         title: University of Nevada, Las Vegas
         caption: 2021
+        caption: Final GPA: 3.7
         sub_title: Bachelors of Science in Electrical Engineering
           #        quote: >
           #          Put a quote describing UNLV here
