--- a/_config.yml
+++ b/_config.yml
@@ -56,21 +56,37 @@ content:
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
+      #      - layout: top-middle
+      #        title: Super awesome project
+      #        link: github.com/sproogen
+      #        # link_text: Project Website
+      #        additional_links:
+      #          - title:  sproogen/modern-resume-theme
+      #            icon: fab fa-github
+      #            url: github.com/sproogen/modern-resume-theme
+      #          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+      #          #   icon: fab fa-github
+      #          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+      #        quote: >
+      #          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+      #        description: | # this will include new lines to allow paragraphs
+      #          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
+        title: Queit and Efficient Vertical Take-off and Landing Vehicle
+        #link: github.com/sproogen
         # link_text: Project Website
-        additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
+        #        additional_links:
+        #          - title:  sproogen/modern-resume-theme
+        #            icon: fab fa-github
+        #            url: github.com/sproogen/modern-resume-theme
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          Unique capabilities of vertical lift and hover provides potential for exceptional access and mobility in both commercial and public good applications
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          This project has the aim of developing a low-cost design for a vertical takeoff and landing (VTOL) vehicle.
+          The designs will be tilt-rotor vehicles, and the designs will be openly available for others to use and contribute to.
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
@@ -80,19 +96,55 @@ content:
         #link: boringcompany.com
         # link_text: boringcompany.com
         sub_title: Research Assistant
-        caption: November 2021 - Present
+        caption: January 2021 - Present
         #quote: >
           #Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             Building new UAS systems and adding functionality.
+            Autonomous control of drones using PX4 Autopilot.
+            Programming firmware for PX4 to be flashed onto flight controller.
+      - layout: left
+        title: Nevada System of Higher Education
+        #link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: STEM Tutor
+        caption: January 2019 - October 2021
+        #quote: >
+          #Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            As a tutor, I guided students through their coursework.
+            Identifying and addressing deficiencies is critical to a student’s success.
+            Communication is paramount to supplementing students’ understanding.
+      - layout: left
+        title: Tesla
+        #link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: New Homes Photovoltaic Designer
+        caption: July 2017 - June 2018
+        #quote: >
+          #Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Analyzed the aspects of new housing developments to consult sales regarding photovoltaic systems that could remain consistent throughout the community.
+      - layout: left
+        title: Solarcity
+        #link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: Photovoltaic Designer
+        caption: March 2015 - July 2017
+        #quote: >
+          #Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        description: | # this will include new lines to allow paragraphs
+            Information from surveyors was used to create a photovoltaic (solar) system for residential projects.
+            Electrical, mechanical, and structural factors were considered to create the optimal system.
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
         title: University of Nevada, Las Vegas
-        caption: 2021
-        caption: Final GPA: 3.7
+        caption: |
+          3.7 GPA
+          2021
         sub_title: Bachelors of Science in Electrical Engineering
           #        quote: >
           #          Put a quote describing UNLV here
@@ -101,7 +153,9 @@ content:
 
       - layout: left
         title: College of Southern Nevada
-        caption: 2013
+        caption: |
+          3.4 GPA
+          2013
         sub_title: Associate of Science
         description: | # this will include new lines to allow paragraphs
           While I was at CSN, I began tutoring other students which built my confidence in teamwork and independent learning.
